--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,27 @@
 
 /* Your CSS Code here. */
+.container {
+	display: flex;
+	justify-content: space-between;
+}
+
+.item1 {
+	width: 50px;
+	height: 50px;
+	background-color: green;
+}
+.item2 {
+	width: 50px;
+	height: 50px;
+	background-color: red;
+}
+.item3 {
+	width: 50px;
+	height: 50px;
+	background-color: blue;
+}
+.item4 {
+	width: 50px;
+	height: 50px;
+	background-color: blue;
+}
